--- a/.env
+++ b/.env
@@ -6,8 +6,10 @@ DATABASE_URL=mysql+pymysql://root:226226@database:3306/db_mar
 # Segurança
 SECRET_KEY=SECRET_KEY_ZENITHR226
 JWT_SECRET_KEY=JWT_SECRET_KEY_ZENITHR226
+
 # API Key (Google)
 GOOGLE_KEY=AIzaSyAjyHz26Rhxzpc3uZt5IhWvFuzewQ_RBXA
+QPS =5
 
 # Email
 ENVIO_EMAIL_EMAIL=daviragnar226@gmail.com
